# Picos

./: .gitignore  mkdocs.yml  pyproject.toml
app/: config brackup.txt  config.txt  run_picos.py
docs/: index.md  installation.md  model.md  usage.md
src/: class_camera_gx.py  config_cortar_video.py  save_image_cropped_interval.py
src/func/: __init__.py  picos_device.py  picos_interface.py  picos_load_model.py  picos_rules_detection.py  picos_run_model.py  picos_trigger.py
