[project]
name = "picos-novo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<1.0.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "opencv-python (==4.10.0.84)",
    "ultralytics (==8.3.25)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "gxipy @ file:///C:/Users/ekt92712/Documents/ProjetosPython/PICOS/Camera/Galaxy_Linux_Python_2.0.2106.9041/api",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.11,<10.0.0)"
]

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.taskipy.tasks]
test = "poetry run pytest -v"
#format = "isort . && blue ."
kill_doc = "kill -9 $(lsof -t -i :8000)"

[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
